cleancode and decoration

--- a/views/pages/Home.ejs
+++ b/views/pages/Home.ejs
@@ -7,15 +7,13 @@
 
 <body>
 
-    <header></header>
     <% include ../partials/header %>
-    </header>
 
     <div class="container">
         <main>
             <div class="jumbotron">
-                <h1>Northwinds Database</h1>
-                <h2 class="text-secondary">Web application for northwind database management</h2>
+                <h1 class="display-3">Northwinds Database</h1>
+                <p class="lead">Web application for northwind database management</p>
                 <hr>
                 <p>More info</p>
                 <a name="" id="" class="btn btn-primary" href="#" role="button">Let's get started</a>
