change input text
change "placeholder" to "value"
change "disabled" to "readonly"

--- a/views/pages/productdetail.ejs
+++ b/views/pages/productdetail.ejs
@@ -13,27 +13,27 @@
         <h1><%= data.ProductName %></h1>
         <div class="form-group">
             <label for="">ID</label>
-            <input type="text" class="form-control" name="" id="" aria-describedby="helpId" placeholder="<%= data.ProductID %>" disabled>
+            <input type="text" class="form-control" name="" id="" aria-describedby="helpId" value="<%= data.ProductID %>" readonly>
             <small id="helpId" class="form-text text-muted">Help text</small>
           </div>
           <div class="form-group">
            <label for="">Name</label>
-           <input type="text" class="form-control" name="" id="" aria-describedby="helpId" placeholder="<%= data. ProductName %>" disabled>
+           <input type="text" class="form-control" name="" id="" aria-describedby="helpId" value="<%= data. ProductName %>" readonly>
            <small id="helpId" class="form-text text-muted">Help text</small>
          </div>
          <div class="form-group">
            <label for="">Quantity Per Unit</label>
-           <input type="text" class="form-control" name="" id="" aria-describedby="helpId" placeholder="<%= data.QuantityPerUnit %>" disabled>
+           <input type="text" class="form-control" name="" id="" aria-describedby="helpId" value="<%= data.QuantityPerUnit %>" readonly>
            <small id="helpId" class="form-text text-muted">Help text</small>
          </div>
          <div class="form-group">
            <label for="">Unit Price</label>
-           <input type="text" class="form-control" name="" id="" aria-describedby="helpId" placeholder="<%= data.UnitPrice %>" disabled>
+           <input type="text" class="form-control" name="" id="" aria-describedby="helpId" value="<%= data.UnitPrice %>" readonly>
            <small id="helpId" class="form-text text-muted">Help text</small>
          </div>
          <div class="form-group">
            <label for="">Units In Stock</label>
-           <input type="text" class="form-control" name="" id="" aria-describedby="helpId" placeholder="<%= data.UnitsInStock %>" disabled>
+           <input type="text" class="form-control" name="" id="" aria-describedby="helpId" value="<%= data.UnitsInStock %>" readonly>
            <small id="helpId" class="form-text text-muted">Help text</small>
          </div>
 
